--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome to my department</h1>
+    <h1>welcome to class</h1>
 </body>
 </html>
